fix: align with the layout

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -48,6 +48,8 @@ body {
 
   .nav {
     margin-left: auto;
+    width: 500px;
+    padding: 31px;
   }
    
   .nav-list {
@@ -55,10 +57,12 @@ body {
     justify-content: flex-end;
     align-items: center;
     list-style: none;
+    gap: 31px;
+    margin:0;
+    padding: 0;
   }
 
   .nav-link {
-    padding: 0 30px;
     line-height: 50px;
     text-decoration: none;
     color: var(--font_color);
@@ -80,6 +84,9 @@ body {
   
   .lang_switch{
     font-weight: bold;
+    width: 70px;
+    display: flex;
+    justify-content: space-between;
   }
 
   .eng {
@@ -209,17 +216,16 @@ body {
   .skill_item {
     background-position: center top;
     width: 320px;
-    padding: 20px;
+    padding: 20px 20px 10px;
     box-sizing: border-box;
   }
 
   .item_name {
-    padding-top: 90px;
+    padding-top: 80px;
     padding-bottom: 20px;
     height: 40px;
     font-weight: bold;
     margin: 0 auto;
-    font-size: 18px;
     line-height: 40px;
   }
 
@@ -267,11 +273,14 @@ body {
   }
 
   .video-player {
-    padding-top: 60px;
+    margin-top: 60px;
     position: relative;  
 
   }
 
+  #video {
+    height: 845px;
+  }
   .video {
     width: 100%;
   }
@@ -325,7 +334,7 @@ body {
   .price_item {
     width: 444px;
     border: 3px solid var(--hover_color);
-    padding: 43px 0;
+    padding: 40px 0;
   }
 
   .price_name {
@@ -390,8 +399,9 @@ body {
     border: 2px solid var(--hover_color);
     color: var(--hover_color);
     font: var(--font2);
-    padding-left: 20px;
+    padding-left: 18px;
     background: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
   }
 
   .contacts_item::placeholder {
@@ -428,15 +438,31 @@ body {
   .social-list {
     display: flex;
     width: 188px;
+    height: 50px;
     justify-content: space-between;
     align-items: center;
     list-style: none;
     margin:0;
     padding:0;
+    text-align: center;
+  }
+  
+  .social-list a {
+    display: block;
+    width: 32px;
+    height: 32px;
+  }
+  
+  .social-list img {
+    height: 32px;
+    width: 32px;
   }
 
   .rss-link {
     width: 211px;
+    text-align: left;
+    margin: 0;
+    padding-left: 4px;
   }
 
   .ref {
@@ -459,6 +485,7 @@ body {
 
   .social-list_item {
     transition: 0.3s;
+    align-items: center;
   }
   
   .social-list_item:hover {
